--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "classnames": "^2.3.2",
+    "hooks-react-custom": "^2.2.7",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "react-typed": "^1.2.0",
     "sass": "^1.58.3",
+    "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
